--- a/app/components/goodslist/goodslist.component.css
+++ b/app/components/goodslist/goodslist.component.css
@@ -2,10 +2,33 @@ ul,li{
     list-style: none;
 }
 li{
-    width: 40%;
-    font-size: 30px;
+    width: 30%;
+    font-size: 14px;
     float: left;
-    margin: 5%;
-    height: 100px;
-    background: rgb(25, 214, 34);
+    margin: 40px 25px;
+    height: 200px;
+    background:brown;
+    text-align: center;
+    
+}
+img{
+    width:200px;
+    height: 200px;
+   
+}
+p{
+    width: 250px;
+    overflow: hidden;
+   
+    height: 50px;
+}
+.right{
+    width:40px;
+    height:30px;
+    display: block;
+    font-size: 20px;
+    color: red;
+   
+    float: left;
+    margin-right: 15px;
 }
