--- a/app/components/goodslist/goodslist.component.html
+++ b/app/components/goodslist/goodslist.component.html
@@ -1,5 +1,13 @@
-<ul>
-  <li *ngFor="let item of list">
-    {{item}}
+ 
+ <h2>商品列表展示</h2>
+ <ul>
+  <li *ngFor="let item of dataList;let i=index;" (click)="goDetail(i)">
+    <img [src]="item.goodsListImg">
+   <div>
+      <span class="right">￥{{item.price}}</span>
+     <p>{{item.goodsName}}</p>
+    </div>
+   <!-- <a [routerLink]="['/gooddetail/',i]">{{item}}</a> -->
   </li>
-</ul>
+</ul> 
+
